       command line client. (Stefan)
- CHG: Rework of the merge dialog. (Stefan)
- CHG: Errors which occur in the progress dialog are now shown as new entries
       instead of an interrupting dialog box. (Stefan)
- CHG: The URL history is now kept per working copy. Only checkout/import still
       use a global history of the URL's. (Stefan)
- BUG: 'extended export' would also copy all the .svn folders. (Stefan)
- BUG: the progress dialog wouldn't close by clicking on the 'X'. (Stefan)
- BUG: Special/Invalid chars could be entered for log messages. (Stefan)
- BUG: Deleting more than one file at the time made TSVN crash. (Stefan/Will)
- BUG: Autocompletion could crash TSVN. (Stefan)
- BUG: URL's which need escaping (e.g. if they have spaces) didn't work and
       could even make TSVN crash. (Stefan)
- BUG: The icon set chooser dialog sometimes showed the overlays only in part. (Stefan)

Version 1.1.3
- ADD: Autocompletion for paths/filenames in the commit dialog. (Stefan)
- ADD: Spell checker suggestions when pressing Ctrl-Tab. (Stefan)
- ADD: New Menuentry/Toolbarbutton in TortoiseMerge to mark a conflicted
       file as resolved. (Stefan)
- CHG: Improved refreshing of icons after a TSVN operation. (Will)
- CHG: Major code cleanup throughout the whole project. (Will)
- CHG: Use the same colors for the authors in all graphs. (Stefan)
- BUG: Merging from a deleted branch failed. (Stefan)
- BUG: The coloring of 'copied' revisions in the log dialog didn't work
       correctly after a "Show All". (Stefan)
- BUG: The revision graph got confused with renames. (Stefan)
- BUG: The focused item was lost in the repository browser when closing
       a tree item. (George Wieggers)
- BUG: If a folder was deleted from the commit dialog, its children weren't
       removed from the list shown. (Stefan)
- BUG: if more than one file or filemask were ignored, the parent folder was
       added to the list every time instead of just once. (Stefan)